@@ -1,3 +1,5 @@
+- Improvement: FENIX-15817 - Add support to setup credentials in CgdStudentPhotoClient constructor
+
 2.12.2 (28-08-2024)
 - Refactor:  Support to  multiple active calendars [#UL-FC-5116]
 
